# unassigner

./: .gitignore  CITATION.cff  Dockerfile  README.md  environment.yml  process_ltp_data.py  pyproject.toml  reformat.sh  requirements.txt  setup.py  unassign.py
.github/workflows/: codecov.yml  linter.yml  pr.yml  python-publish.yml  release.yml  test.yml  tests.yml
src/unassigner/: algorithm.py  alignment.py  command.py  download.py  find.py  mismatch_db.py  trim.py
tests/: test_algorithm.py  test_align.py  test_aligned.py  test_aligner.py  test_ani.py  test_command.py  test_download.py  test_extend_hit.py  test_mismatch_db.py  test_parse.py  test_search_blast.py  test_search_fasta.py  test_trim.py  test_trimragged.py  test_util.py
tests/data/: assembly_summary.txt  gg10.fasta  gg10.fasta.nhr  gg10.fasta.nin  gg10.fasta.nsd  gg10.fasta.nsi  gg10.fasta.nsq  mismatch_db.txt  oral_refs.fasta  oral_species.fasta
tests/integration/: test_download.py
tests/unit/: test_algorithm.py  test_align.py  test_aligned.py  test_command.py  test_mismatch_db.py  test_parse.py  test_trim.py
tests/unit/data/: gg10.fasta.nin  gg10.fasta.nsq  species.fasta
unassign/: algorithm.py  align.py  aligner.py  alignment.py  command.py  download.py  parse.py  prepare_strain_data.py  search_blast.py  search_fasta.py  trim.py  trimragged.py  unassignment_probability.py  util.py
unassigner/: algorithm.py  align.py  alignment.py  ani.py  command.py  download.py  extend_hit.py  find.py  mismatch_db.py  parse.py  prepare_strain_data.py  trim.py  unassignment_probability.py
